--- a/index.html
+++ b/index.html
@@ -1,7 +1,85 @@
-<!DOCTYPE html>
-<html>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Popular Coffee Drinks</h1>
+
+<div class="coffee-drink" id="espresso">
+    <h2>Espresso</h2>
+    <p>A strong, full-flavored coffee served in "shots".</p>
+    <div class="ingredients">
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>Finely ground coffee</li>
+            <li>Hot water</li>
+        </ul>
+    </div>
+    <div class="image-container"></div>
+</div>
+
+<div class="coffee-drink" id="americano">
+    <h2>Americano</h2>
+    <p>A coffee drink similar to drip coffee but made by adding hot water to espresso.</p>
+    <div class="ingredients">
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>Espresso</li>
+            <li>Hot water</li>
+        </ul>
+    </div>
+    <div class="image-container"></div>
+</div>
+
+<div class="coffee-drink" id="cappuccino">
+    <h2>Cappuccino</h2>
+    <p>A balanced coffee drink with equal parts espresso, steamed milk, and milk foam.</p>
+    <div class="ingredients">
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>Espresso</li>
+            <li>Steamed milk and milk foam</li>
+        </ul>
+    </div>
+    <div class="image-container"></div>
+</div>
+
+<div class="coffee-drink" id="latte">
+    <h2>Latte</h2>
+    <p>A creamy coffee drink made with espresso and steamed milk.</p>
+    <div class="ingredients">
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>Espresso</li>
+            <li>Steamed milk and milk foam</li>
+        </ul>
+    </div>
+    <div class="image-container"></div>
+</div>
+
+<div class="coffee-drink" id="mocha">
+    <h2>Mocha</h2>
+    <p>A chocolate-flavored coffee drink made with espresso.</p>
+    <div class="ingredients">
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>Espresso and steamed milk</li>
+            <li>Chocolate syrup or cocoa powder</li>
+        </ul>
+    </div>
+    <div class="image-container"></div>
+</div>
+
+<div class="coffee-drink" id="macchiato">
+    <h2>Macchiato</h2>
+    <p>An espresso-based drink with a small amount of milk.</p>
+    <div class="ingredients">
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>Espresso</li>
+            <li>Steamed milk or milk foam</li>
+        </ul>
+    </div>
+    <div class="image-container"></div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
